--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,6 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Blazor_Authentication.Areas.Identity
-
-
-Blazor_Authentication.Pages
+@using Blazor_Authentication.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
